force-app/main/default/objects/Yacht_Booking__c/Yacht_Booking__c.object-meta.xml
<CustomObject>
    <description>Gulet, motor boat, sail boat booking</description>
    <label>Yacht Booking</label>
    <nameField>
        <displayFormat>YBID-{00000000}</displayFormat>
        <label>Yacht Booking ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Yacht Bookings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>