force-app/main/default/objects/Yacht_Booking__c/fields/Check_out__c.field-meta.xml
<CustomField>
    <fullName>Check_out__c</fullName>
    <formula>Chesck_in__c  +  (Week__c * 7)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Check out</label>
    <type>Date</type>
</CustomField>