force-app/main/default/objects/Yacht_Booking__c/fields/Chesck_in__c.field-meta.xml
<CustomField>
    <fullName>Chesck_in__c</fullName>
    <label>Check in</label>
    <type>Date</type>
</CustomField>