force-app/main/default/objects/Yacht_Booking__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Yacht Bookings</relationshipLabel>
    <relationshipName>Yacht_Bookings</relationshipName>
    <type>Lookup</type>
</CustomField>