force-app/main/default/objects/Yacht_Booking__c/fields/Crew_Price__c.field-meta.xml
<CustomField>
    <fullName>Crew_Price__c</fullName>
    <label>Crew Price</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>