force-app/main/default/objects/Yacht_Booking__c/fields/isCrewNeed__c.field-meta.xml
<CustomField>
    <fullName>isCrewNeed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isCrewNeed</label>
    <type>Checkbox</type>
</CustomField>