force-app/main/default/objects/Yacht_Booking__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Yacht Bookings</relationshipLabel>
    <relationshipName>Yacht_Bookings</relationshipName>
    <type>Lookup</type>
</CustomField>