force-app/main/default/objects/Yacht_Booking__c/fields/Total_Price__c.field-meta.xml
<CustomField>
    <fullName>Total_Price__c</fullName>
    <formula>IF( isCrewNeed__c ,  Week__c * ( Yacht__r.Price__c + ( Crew_Price__c * 7)), Week__c * Yacht__r.Price__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>