force-app/main/default/objects/Yacht_Booking__c/fields/Week__c.field-meta.xml
<CustomField>
    <fullName>Week__c</fullName>
    <defaultValue>1</defaultValue>
    <label>Week</label>
    <precision>5</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>