force-app/main/default/objects/Yacht_Booking__c/fields/Yacht__c.field-meta.xml
<CustomField>
    <fullName>Yacht__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Yacht</label>
    <referenceTo>Yacht__c</referenceTo>
    <relationshipLabel>Yacht Bookings</relationshipLabel>
    <relationshipName>Yacht_Bookings</relationshipName>
    <type>Lookup</type>
</CustomField>