force-app/main/default/objects/Yacht_Booking__c/fields/Yacht_Route__c.field-meta.xml
<CustomField>
    <fullName>Yacht_Route__c</fullName>
    <label>Yacht Route</label>
    <type>TextArea</type>
</CustomField>