force-app/main/default/objects/Yacht_Booking__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Chesck_in__c</columns>
    <columns>Check_out__c</columns>
    <columns>Contact__c</columns>
    <columns>isCrewNeed__c</columns>
    <columns>isMedicDeclared__c</columns>
    <columns>Week__c</columns>
    <columns>Yacht__c</columns>
    <columns>Yacht_Route__c</columns>
    <columns>Total_Price__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>